Beautify website: new layout, tags, colors

--- a/index.html
+++ b/index.html
@@ -2,31 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-
-  <title>Fiona Jiang | Junior IT</title>
-
+  <title>Fiona Jiang | IT Graduate</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  
   <!-- 字体 -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
-
-  <!-- 引入 CSS -->
+  
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
 <div class="container">
 
-  <h1>Fiona Jiang</h1>
-  <p class="subtitle">
-    Junior IT / Application Support  ·  Master of Computing and Innovation<br>
-    Adelaide-based  ·  Seeking a long-term role in Australia
-  </p>
+  <!-- Header -->
+  <header>
+    <h1>Fiona Jiang</h1>
+    <p class="subtitle">
+      Adelaide-based IT Graduate | Junior Developer / Application Support | Open to Full-time Opportunities
+    </p>
+  </header>
 
+  <!-- Skills -->
   <section>
     <h2>Skills</h2>
-    <div>
+    <div class="tags">
       <span class="tag">JavaScript</span>
       <span class="tag">HTML</span>
       <span class="tag">CSS</span>
@@ -36,24 +36,26 @@
     </div>
   </section>
 
+  <!-- Projects -->
   <section>
     <h2>Projects</h2>
-    <p class="project-title">Online Chat Feature Enhancement</p>
-    <p>
-      Improved frontend chat components using JavaScript and React under senior developer guidance.
-      Followed version control and documentation standards.
-    </p>
+    <div class="project">
+      <p class="project-title">Online Chat Feature Enhancement</p>
+      <p>Improved frontend chat components using JavaScript and React under senior developer guidance. Followed version control and documentation standards.</p>
+    </div>
   </section>
 
+  <!-- Contact -->
   <section class="contact">
     <h2>Contact</h2>
     <p>
-      <a href="mailto:jiangshuoshuo19@gmail.com">jiangshuoshuo19@gmail.com</a>
-      <a href="https://github.com/FionaJ19/" target="_blank">GitHub</a>
-      <a href="https://www.linkedin.com/in/fiona-jiang-167907295/" target="_blank">LinkedIn</a>
+      📧 <a href="mailto:jiangshuoshuo19@gmail.com">jiangshuoshuo19@gmail.com</a><br>
+      <a href="https://github.com/fionaj19" target="_blank">GitHub</a> |
+      <a href="https://linkedin.com/in/fionaj19" target="_blank">LinkedIn</a>
     </p>
   </section>
 
+  <!-- Footer -->
   <footer>
     © 2026 Fiona Jiang · Built with HTML & CSS
   </footer>
